- add checkstyle and most of the fixes by checks - add check dependency version and update them